# blackcell

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  Containerfile  README.md  alpha.plan.yaml  blackcell.plan.yaml  blackcell.toml  compose.yaml  pyproject.toml  refactor-consolidation.plan.yaml
.agents/: evidence-gated-code-reviewer.md
.codex/: config.toml
.codex/agents/: k_pr_explorer.toml  k_reviewer.toml  k_spark_worker.toml  k_verifier.toml  quality-reviewer.toml  spark-evidence-drafter.toml
.codex/orchestration/: change-spec.schema.json  validate_contract.py  worker-packet.schema.json  worker-result.schema.json
.codex/rules/: blackcell.rules
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.opencode/agents/: blackcell-astrophage.md  blackcell-chimera.md  blackcell-lumen.md  blackcell-mycelium.md  blackcell-spore.md  blackcell-umbra.md
.opencode/commands/: blackcell-graph.md  blackcell-observe.md  blackcell-plan.md  blackcell-review.md
architecture/: dependency_debt.json  dependency_rules.json
docs/: architecture.md  charter.md  control-plane-configuration.md  evaluation-methodology.md  implementation-baseline.md  index.md  migration-ledger.md  scientific-basis.md  scope.md  vanguard.md
docs/adr/: 0001-event-sourced-kernel.md  0002-domain-scoped-state.md  0003-model-execution-boundary.md  0004-evolutionary-runtime-architecture.md  0005-durable-run-and-execution-protocol.md  0006-versioned-run-feedback-protocol.md  0007-runtime-security-boundary.md  0008-architecture-consolidation.md  0009-project-runtime-scope.md
docs/agent/: code_review.md
docs/atlas/: decisions.md  glossary.md  graph.md
docs/concepts/: agent-operating-model.md  custom-agents.md  harness.md  nesy.md  runtime-adapters.md  traces.md  world-model.md
docs/guides/: alpha-operator-quickstart.md  alpha-review-configuration.md  alpha-verify-configuration.md  alpha-worker-configuration.md  latent-harness-quickstart.md  runtime-v1-release.md
docs/legacy/: control-plane.md  vanguard.md
docs/research/: nesy-implementations.md  spark-repository-perception.md  world-models.md
docs/spec/: bcp-0026-telemetry-ledger.md  bcp-0027-latent-transition-capsules.md  bcp-0028-charter-reset.md  bcp-0029-event-kernel.md  bcp-0030-repository-state.md  bcp-0031-context-and-control.md  bcp-0032-repository-operator.md  bcp-0033-operator-bench.md  bcp-0034-evolutionary-runtime.md  index.md  jepa-latent-prediction.md
docs/targets/: codex-cli.md  containers.md  opencode.md  recovery.md
examples/: BCP-0001.json
examples/alpha/: alpha-verify.json
examples/gateway/: local-first.yaml
examples/runtime-v1/: README.md  recorded-operator.sh
experiments/baseline/: wp00.json
experiments/legacy_retirement/: wp26-characterization.json  wp26-retirement.json
experiments/operator_bench/: README.md  manifest.json  wp23-recorded.json
experiments/prediction_bench/: README.md  manifest.json  wp24-recorded.json
experiments/runtime_bench/: README.md  manifest.json  wp25-recorded.json
release/alpha/: README.md  acceptance-manifest.json  live-provider-proof.json
release/architecture-consolidation/: verification-manifest.json
release/runtime-v1/: README.md  blackcell-runtime-v1.cdx.json  release.toml  verification-manifest.json
scripts/: github_graphql_capabilities.py  linear_schema_jsonl.py
src/blackcell/: __init__.py  auth.py  models.py
tests/: __init__.py  cli_runner.py  conftest.py
tests/architecture/: __init__.py  test_dependencies.py
tools/: architecture_consolidation_evidence.py  release_evidence.py  run_pytest.py
(+594 files in other folders)
