[project]
name = "blackcell"
version = "0.2.0"
description = "Event-sourced control runtime for evidence-grounded LLM agents"
readme = "README.md"
authors = [
    { name = "kmosoti", email = "47609243+kmosoti@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "clingo>=5.8.0,<6",
    "cyclopts>=4.20.0",
    "granian[pname]>=2.7.9,<3",
    "litestar>=2.24.0,<3",
    "msgspec>=0.21.1,<1",
    "opentelemetry-api>=1.42.1,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.42.1,<2",
    "opentelemetry-sdk>=1.42.1,<2",
    "pyratatui>=0.2.9,<0.3",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
]

[project.scripts]
blackcell = "blackcell.cli.app:main"
blackcell-runtime = "blackcell.bootstrap.process:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hypothesis>=6.155.7",
    "mutmut>=3.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "ty>=0.0.55",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
branch = true
source = ["blackcell"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 86
